kubernetes/storage/longhorn/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-external
spec:
  ingressClassName: internal
  rules:
    - host: &host longhorn.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
